Updated sorting for weekly menu so menu present from monday to friday